<resources>
    <string name="app_name">SQLite Forest</string>
    <string name="logo_de_la_aplicaci_n">Logo de la aplicación</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="salir">Salir</string>
    <string name="mis_parques">Parques</string>
    <string name="listado_de_parques">Listado de Parques</string>
    <string name="mis_guardabosques">Guardabosques</string>
    <string name="listado_de_guardabosques">Listado de Guardabosques</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="nombre_del_guardabosque">Nombre del guardabosque</string>
    <string name="edad">Edad</string>
    <string name="a_os_de_servicio">Años de servicio</string>
    <string name="especialidad">Especialidad</string>
    <string name="descripci_n">Descripción</string>
    <string name="registrar">Registrar</string>
    <string name="buscar">Buscar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_del_parque">Nombre del parque</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="tama_o">Tamaño</string>
    <string name="descripci_n2">Descripción</string>
    <string name="registrar2">Registrar</string>
    <string name="buscar2">Buscar</string>
    <string name="editar2">Editar</string>
    <string name="eliminar2">Eliminar</string>
    <string name="limpiar">Limpiar</string>
    <string name="guardabosques">Guardabosques</string>
    <string name="parques">Parques</string>
    <string-array name="tipos_parque">
        <item>Urbano</item>
        <item>Suburbano</item>
        <item>Rural</item>
        <item>Protegido</item>
        <item>Nacional</item>
        <item>Internacional</item>
    </string-array>
</resources>