<!-- layout/fragment_parques.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextParqueNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="nombre del parque"
        android:hint="@string/nombre_del_parque"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextParqueUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="ubicación"
        android:hint="@string/ubicaci_n"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerTipoParque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tipos_parque" />

    <EditText
        android:id="@+id/editTextParqueTamano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="tamaño"
        android:hint="@string/tama_o"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextParqueDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="descripción"
        android:hint="@string/descripci_n2"
        android:inputType="text" />

    <Button
        android:id="@+id/btnRegistrarParque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnBuscarParque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnEditarParque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnEliminarParque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"
        android:textColor="@android:color/white" />
</LinearLayout>
