<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_de_la_aplicaci_n"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/usuario"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar_usuario" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:textColor="@android:color/white" />
</LinearLayout>
